# lost-cities-game

./: Cargo.toml  README.md  alpha_play_test_notes.md  ec2_help.md  rules.md
notes/: alpha_play_test_notes.md  client_install.md  client_release.md  ec2_install.md  learnings.md
src/: main.rs
src/crates/: README.md
src/crates/api/: Cargo.toml
src/crates/api/src/: backend_client.rs  handler.rs  lib.rs  types.rs
src/crates/backend-engine/: Cargo.toml
src/crates/backend-engine/src/: backend_error.rs  game_api.rs  lib.rs
src/crates/backend-engine/src/cache_slots/: mod.rs  slots.rs  slotted_backend.rs
src/crates/backend-engine/src/game_engine/: backend_game_api.rs  mod.rs
src/crates/backend-engine/src/task/: backend_task_client.rs  backend_task_event.rs  backend_task_handler.rs  mod.rs
src/crates/backend-engine/src/v2/: mod.rs
src/crates/backend-engine/src/v2/framework/: mod.rs  prng.rs  shuffler.rs
src/crates/backend-engine/src/v2/games/: mod.rs
src/crates/backend-engine/src/v2/games/lost_cities/: mod.rs
src/crates/backend-engine/src/v2/games/love_letter/: impl1.rs  impl2.rs  impl2b.rs  mod.rs  types.rs
src/crates/bin-client/: Cargo.toml
src/crates/bin-client/src/: cli.rs  lib.rs  main.rs  move_selector.rs  state_machine.rs
src/crates/bin-client/src/frontend/: frontend_error.rs  frontend_impl.rs  mod.rs
src/crates/bin-client/src/screens/: game.rs  main_menu.rs
src/crates/bin-server/: Cargo.toml  build.rs
src/crates/bin-server/src/: lib.rs  main.rs  server_impl.rs  type_converters.rs
src/crates/bin-server/src/backend/: backend_error.rs  backend_impl.rs  channels.rs  mod.rs
src/crates/bin-server/src/wire_api/: enum_converter.rs  error_converters.rs  mod.rs  proto_lost_cities.rs  type_converters.rs
src/crates/client-engine/: Cargo.toml  build.rs
src/crates/client-engine/src/: lib.rs
src/crates/client-engine/src/client_game_api/: error.rs  game_client.rs  mod.rs  provider.rs
src/crates/client-engine/src/wire_api/: enum_converter.rs  mod.rs  proto_lost_cities.rs  type_converters.rs
src/crates/game-api/: Cargo.toml
src/crates/game-api/src/: api.rs  backend_errors.rs  display.rs  frontend_errors.rs  lib.rs  rand_utils.rs  types.rs
src/crates/rules/: Cargo.toml
src/crates/rules/src/: deck.rs  endgame.rs  lib.rs  plays.rs  rand_util.rs  scoring.rs
src/crates/storage/: Cargo.toml
src/crates/storage/src/: lib.rs  local_storage.rs  storage_api.rs  storage_types.rs  test_utils.rs
src/crates/storage/src/local_disk_storage/: mod.rs  sqlite_integration.rs  sqlite_tables.rs  sqlite_tests.rs
src/crates/storage/src/v2/: config.rs  db_api.rs  db_type_converters.rs  db_types.rs  integ_tests.rs  mod.rs
src/crates/storage/src/v2/task/: config.rs  events.rs  mod.rs  receiver.rs  sender.rs
src/crates/types/: Cargo.toml
src/crates/types/src/: display.rs  lib.rs
src/crates/wire-api/: Cargo.toml  lost_cities_wire.proto
src/crates/wire-api/src/: enum_converter.rs  type_converters.rs
src/crates/wire_types/: Cargo.toml  build.rs  lost_cities_wire.proto
src/crates/wire_types/src/: enum_converter.rs  lib.rs  proto_lost_cities.rs
src/protobuf/: lost_cities_wire.proto
