[package]
name = "api"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[dependencies]
# Local repo dependencies
storage = { path = "../storage" } # Backend only
rules = { path = "../rules" } # Backend only
types = { path = "../types" }
wire_types = { path = "../../crates/wire_types" } # Frontend only

# External dependencies
rand = "=0.7.3"
#tokio = { version = "0.2", features = ["full"] } # Frontend only
tonic = "0.1.1" # Frontend only
futures = "=0.3.4" # Frontend only
