[package]
name = "api"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[dependencies]
# Local repo dependencies
storage = { path = "../storage" } # Backend only
rules = { path = "../rules" } # Backend only
game-api = { path = "../game-api" }
wire-api = { path = "../wire-api" }

# External dependencies
rand = "=0.7.3"
#tokio = { version = "0.2", features = ["full"] } # Frontend only
tonic = "0.1.1" # Frontend only
futures = "=0.3.4" # Frontend only
