[package]
name = "backend-engine"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[dependencies]
# 1p
storage = { path = "../storage" }
rules = { path = "../rules" }
game-api = { path = "../game-api" }

# 3p
async-trait = "0.1.24"
chrono = "0.4"
num_cpus = "1.12.0"
prost = "0.6"
prost-types = "0.6"
rand = "=0.7.3"
rand_core = "=0.5.1"
tokio = { version = "0.2", features = ["full"] }
