[package]
name = "client"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "lost-cities-game-client"
path = "src/main.rs"

[dependencies]
# Local repo dependencies
api = { path = "../api" }
game-api = { path = "../game-api" }
# Client has access to server types, which is weird. Figure out how to export cargo "features"
wire-api = { path = "../wire-api" }

# External dependencies
