[package]
name = "client"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "lost-cities-game-client"
path = "src/main.rs"

[dependencies]
# Local repo dependencies
game-api = { path = "../game-api" }
# Client has access to tonic server, which is weird. Figure out how to export cargo "features"
wire-api = { path = "../wire-api" }

# External dependencies
futures = "=0.3.4"
tokio = { version = "0.2", features = ["full"] }

# frontend mod only
async-trait = "0.1.24"
tonic = "0.1.1"
