[package]
name = "bin-client"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "lost-cities-game-client"
path = "src/main.rs"

[dependencies]
# 1p
client-engine = { path = "../client-engine" }
game-api = { path = "../game-api" }

# 3p
tokio = { version = "0.2", features = ["full"] }
