[package]
name = "server"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "lost-cities-game-server"
path = "src/main.rs"

[dependencies]
# Local repo dependencies
wire_types = { path = "../../crates/wire_types" }
api = { path = "../../crates/api" }
types = { path = "../../crates/types" }

# External dependencies
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.1"