[package]
name = "server"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "lost-cities-game-server"
path = "src/main.rs"

[dependencies]
# Local repo dependencies
storage = { path = "../storage" } # Backend only
rules = { path = "../rules" } # Backend only
game-api = { path = "../game-api" }
wire-api = { path = "../wire-api" }

# External dependencies
async-trait = "0.1.24"
futures = "=0.3.4"
rand = "=0.7.3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.1"
