[package]
name = "rules"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local repo dependencies
storage = { path = "../storage" }
types = { path = "../types" }

# External dependencies
#rand = "=0.7.3"
