[package]
name = "storage"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[dependencies]
# 1p
game-api = { path = "../game-api" }

# 3p
rusqlite = { version = "=0.21.0", features = ["functions"] }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.24"

[dev-dependencies]
rand = "=0.7.3"